# eventfold-db

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: design.md
eventfold-console/: Cargo.toml
eventfold-console/src/: app.rs  client.rs  tui.rs
prd/: 002-on-disk-format-status.md  002-on-disk-format-tickets.md  002-on-disk-format.md  003-storage-engine.md  004-writer-task-status.md  004-writer-task-tickets.md  004-writer-task.md  005-subscription-broker.md  006-grpc-service.md  007-server-binary.md  008-batch-atomicity-crash-consistency-status.md  008-batch-atomicity-crash-consistency-tickets.md  008-batch-atomicity-crash-consistency.md  009-console-tui-status.md  010-idempotent-appends-status.md  010-idempotent-appends-tickets.md  010-idempotent-appends.md  011-tls-mtls-support.md  012-grpc-health-check.md  013-metrics-observability.md  014-list-streams-rpc.md  015-subscription-checkpoint-messages.md  016-oci-arm-deployment.md  018-open-source-publishing-prep-status.md  018-open-source-publishing-prep-tickets.md  018-open-source-publishing-prep.md  019-jwt-authentication-interceptor-status.md  019-jwt-authentication-interceptor-tickets.md  019-jwt-authentication-interceptor.md
prd/002-on-disk-format-reports/: ticket-01-impl.md  ticket-01-review.md  ticket-02-impl.md  ticket-02-review.md  (+4 more)
src/: auth.rs  broker.rs  codec.rs  dedup.rs  lib.rs  main.rs  reader.rs  store.rs  writer.rs
tests/: auth_integration.rs  broker_integration.rs  grpc_service.rs  idempotent_appends.rs  metrics.rs  server_binary.rs  writer_integration.rs
(+37 files in other folders)
