[workspace]
members = [".", "eventfold-console"]

[package]
name = "eventfold-db"
version = "0.1.0"
edition = "2024"
description = "A lightweight, single-node event store for event sourcing and CQRS"
license = "MIT OR Apache-2.0"
authors = ["Foxworks Studios"]
repository = "https://github.com/Foxworks-Studios/eventfold-db"
readme = "README.md"
keywords = ["event-store", "event-sourcing", "cqrs", "grpc", "database"]
categories = ["database", "asynchronous", "network-programming"]
rust-version = "1.85"

[dependencies]
async-stream = "0.3"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
bytes = "1"
futures-core = "0.3"
crc32fast = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
prost = "0.13"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13", features = ["tls-ring"] }
tonic-health = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
lru = "0.12"
uuid = { version = "1", features = ["v4", "v7"] }

[dev-dependencies]
futures = "0.3"
rcgen = "0.13"
serial_test = "3"
tempfile = "3"

[build-dependencies]
tonic-build = "0.13"
